[workspace]
workspace.resolver = "2"
members = ["twust-macro", "tailwind"]


[workspace.package]
name = "twust"
version = "1.0.4"
edition = "2021"
authors = ["Oyelowo Oyedayo"]
description = "One codebase to rule them all"
documentation = "https://codebreather.com/oyelowo"
license = "MIT/Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


# exclude = ["examples", "tests"]


[workspace.dependencies]
twust = { path = "twust-macro" }
# tailwind = { path = "tailwind" }

proc-macro2 = "1.0.69"
quote = "1.0.33"
syn = "2.0.38"
nom = "7.1.3"
static_assertions = "1.1.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
regex = "1.10.0"
# tailwindcss-core = { git = "https://github.com/Oyelowo/tailwindcss.git", rev = "696810fd5a3d30ee8225913af268be1d2c9dbced" }
# tailwindcss-core = { git = "https://github.com/Oyelowo/tailwindcss/oxide/crates/core.git", rev = "696810fd5a3d30ee8225913af268be1d2c9dbced" }
