[workspace]
workspace.resolver = "2"
members = ["twust", "twust_macro", "tailwind"]


[workspace.package]
name = "twust"
version = "1.0.5"
edition = "2021"
authors = ["Oyelowo Oyedayo"]
email = ["oyelowo.oss@gmai.com"]
readme = "README.md"
documentation = "https://docs.rs/nom"
# documentation = "https://codebreather.com/oyelowo"
repository = "https://github.com/Oyelowo/twust"
description = "Zero-config Static type-checker for Tailwind CSS"
license = "MIT/Apache-2.0"
categories = ["UI", "css", "tailwindcss", "web-programming"]
keywords = [
  "tailwind",
  "css",
  "tailwindcss",
  "frontend",
  "ui",
  "rust",
  "web",
  "twust",
]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


# exclude = ["examples", "tests"]


[workspace.dependencies]
twust = { path = "twust" }
twust_macro = { path = "twust_macro" }
proc-macro2 = "1.0.69"
quote = "1.0.33"
syn = { version = "2.0.38" }
# syn = { version = "2.0.38", features = ["full"] }
nom = "7.1.3"
static_assertions = "1.1.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
regex = "1.10.0"
# tailwindcss-core = { git = "https://github.com/Oyelowo/tailwindcss.git", rev = "696810fd5a3d30ee8225913af268be1d2c9dbced" }
# tailwindcss-core = { git = "https://github.com/Oyelowo/tailwindcss/oxide/crates/core.git", rev = "696810fd5a3d30ee8225913af268be1d2c9dbced" }
