[workspace]
workspace.resolver = "2"
members = ["twust", "twust_macro", "tailwind"]


[workspace.package]
name = "twust"
version = "1.0.6"
edition = "2021"
authors = ["Oyelowo Oyedayo"]
email = ["oyelowo.oss@gmai.com"]
readme = "README.md"
documentation = "https://docs.rs/twust"
# documentation = "https://codebreather.com/oyelowo"
repository = "https://github.com/Oyelowo/twust"
description = "Zero-config Static type-checker for Tailwind CSS"
license = "MIT/Apache-2.0"
categories = ["UI", "css", "tailwindcss", "web-programming"]
keywords = ["tailwind", "css", "tailwindcss", "ui", "web"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


# exclude = ["examples", "tests"]


[workspace.dependencies]
twust = { path = "twust" }
# twust_macro = { version = "1.0.6", features = ["daisyui"] }
twust_macro = { path = "twust_macro", features = ["daisyui"] }
proc-macro2 = "1.0.69"
quote = "1.0.33"
syn = { version = "2.0.38", features = ["full"] }
nom = "7.1.3"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"

