[package]
name = "tailwind"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tw-macro = { workspace = true }

deno_core = "0.208.0"
deno_runtime = "0.126.0"
quick-js = "0.4.1"
serde = "1.0.188"
# serde = { version = "1.0188", features = ["all"] }
serde_json = "1.0.105"
tokio = "1.32.0"
