[package]
name = "tailwind"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twust = { workspace = true, features = ["daisyui"] }
serde = "1.0.188"
serde_json = "1.0.105"


[features]
daisyui = []
