[package]
name = "twust"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
# description = { workspace = true }
documentation = { workspace = true }
license = { workspace = true }
repository = "https://github.com/Oyelowo/twust"
description = "Static checker for tailwindcss class names in rust for rust"
readme = "../README.md"
keywords = ["tailwindcss", "tailwind", "css", "leptos", "yew"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
daisyui = []

# workspace = "."

[dependencies]
syn = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
nom = { workspace = true }
static_assertions = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
# tailwindcss-core = { workspace = true }


[lib]
proc-macro = true
