[package]
name = "twust_macro"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
documentation = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = { workspace = true }
readme = { workspace = true }
keywords = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
daisyui = []

[dependencies]
syn = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
nom = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }


[lib]
proc-macro = true
