[package]
name = "tailwind-csr-trunk"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
leptos = { version = "0.5.0-beta2", features = ["csr", "nightly"] }
leptos_meta = { version = "0.5.0-beta2", features = ["csr", "nightly"] }
leptos_router = { version = "0.5.0-beta2", features = ["csr", "nightly"] }
log = "0.4.2"
gloo-net = { version = "0.4.0", features = ["http"] }
twust = { version = "*", features = ["daisyui"] }
# twust = { git = "https://github.com/oyelowo/twust", features = ["daisyui"] }


# dependecies for client (enable when csr or hydrate set)
wasm-bindgen = { version = "0.2" }
console_log = { version = "1" }
console_error_panic_hook = { version = "0.1" }
