[package]
name = "tailwind-csr-trunk"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
leptos = { version = "0.7.4", features = ["csr"] }
leptos_meta = { version = "0.7.4" }
leptos_router = { version = "0.7.4" }
log = "0.4.25"
gloo-net = { version = "0.6.0", features = ["http"] }
twust = { version = "*", features = ["daisyui"] }
# twust = { git = "https://github.com/oyelowo/twust", features = ["daisyui"] }


# dependecies for client (enable when csr or hydrate set)
wasm-bindgen = { version = "0.2" }
console_log = { version = "1" }
console_error_panic_hook = { version = "0.1" }
